tests/NormalTests/paczka1/small_fuzzy/72625605.err
Error in line 6: Rd7SjdN S401 33,7
Error in line 8: Rd7SjdN S893 15,2
